@@ -1,32 +1,40 @@
 package guideme.document.interaction;
 
+import guideme.internal.screen.IndepentScaleScreen;
 import guideme.siteexport.ResourceExporter;
 import java.util.List;
+import java.util.stream.Collectors;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.inventory.tooltip.ClientTooltipComponent;
-import net.minecraft.network.chat.Component;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.item.ItemStack;
 
 public class ItemTooltip implements GuideTooltip {
     private final ItemStack stack;
+    private final ItemStack icon;
 
     public ItemTooltip(ItemStack stack) {
-        this.stack = stack;
+        this(stack, stack);
     }
 
-    @Override
-    public ItemStack getIcon() {
+    public ItemTooltip(ItemStack stack, ItemStack icon) {
+        this.stack = stack;
+        this.icon = icon;
+    }
+
+    public ItemStack getItem() {
         return stack;
     }
 
     @Override
-    public List<ClientTooltipComponent> getLines() {
-        var lines = Screen.getTooltipFromItem(Minecraft.getInstance(), stack);
+    public ItemStack getIcon() {
+        return icon;
+    }
+
+    @Override
+    public List<GuideTooltipComponent> getLines() {
+        var lines = IndepentScaleScreen.getTooltipFromItem(Minecraft.getMinecraft(), stack);
         return lines.stream()
-                .map(Component::getVisualOrderText)
-                .map(ClientTooltipComponent::create)
-                .toList();
+                .map(TextTooltipComponent::new)
+                .collect(Collectors.toList());
     }
 
     @Override
